PYIC-2043 Set up `validate-oauth-callback` lambda to handle oauth success callback